# hydra-ogmios

./: Cargo.toml  README.md  flake.nix  rust-toolchain  shell.nix
src/: encode.rs  main.rs  ogmios.rs  snapshot_confirmed.rs  utxo.rs
testdata/: events  find_intersection.json  snapshot_confirmed.json  snapshot_confirmed_2.json  transaction_received.json  tx_1  tx_2
