#![feature(error_in_core)]

[package]
name = "hydra-ogmios"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0"
ciborium = "0.2.2"
hex = "0.4.3"
pallas = "0.30.2"
bech32 = "0.11.0"
pallas-codec = "0.30.2"
pallas-primitives = "0.30.2"
pallas-traverse = "0.30.2"
minicbor = { version = "0.20", features = ["std", "half", "derive"] }
anyhow = "1.0.88"
derivative = "2.2.0"
tungstenite = "0.24.0"
blake2 = "0.10.6"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "*"
clap_derive = { version = "4.0.0-rc.1" }
clap = { version = "4.5.19", features = ["derive"] }
